# coil-toolchain-windows

./: LICENSE  README.md  default.nix  fixeds.json  makemsix.nix  msvc-cmake-cpp-modules.patch  msvc.nix  windows.nix
autounattend/: 2019.xml  2022.xml  2025.xml
get-clang-version/: CMakeLists.txt  get-clang-version.cpp
pe-deps/: CMakeLists.txt  pe-deps.cpp
